# Physarum

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: gl_error_handeling.h  shader.h  shader_program.h  stopwatch.h  text_renderer.h  texture.h
include/rendering/: raytracer.hpp  raytracerCPU.hpp  raytracerGPU.hpp  renderingMode.hpp  scene.hpp  shader.hpp
include/rendering/glDebugging/: openGLDebug.hpp
include/rendering/text/: bitmapFont.hpp  bitmapTextRenderer.hpp
resources/: diffuse.comp  sim.comp  tex.vs
resources/shaders/: raytracedImage.fs  raytracedImage.vs  raytracingIterative.comp  raytracingRecursive.comp  raytracingSimple.comp  texture.fs  texture.vs
src/: gl_error_handeling.c  main.c  shader.c  shader_program.c  stopwatch.c  text_renderer.c  texture.c
src/rendering/: raytracer.cpp  raytracerCPU.cpp  raytracerGPU.cpp  scene.cpp  shader.cpp
src/rendering/text/: bitmapFont.cpp  bitmapTextRenderer.cpp
